bug(Dropdown): fixes #314, add margin to bottom of dropdowns so they do not look cut off on small screens

--- a/src/elements/dropdown/Dropdown.scss
+++ b/src/elements/dropdown/Dropdown.scss
@@ -29,6 +29,7 @@ novo-dropdown-container {
     line-height: 26px;
     display: none;
     margin: 0;
+    margin-bottom: 20px;
     position: absolute;
     padding: 0;
     min-width: 180px;
